[gd_scene load_steps=5 format=3 uid="uid://b0wfwegu6kl41"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_lvs3r"]
[ext_resource type="SpriteFrames" uid="uid://brqchxp3sc208" path="res://assets/spriteframes/player_body.tres" id="2_ipv2i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kxhnw"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3dhac"]
radius = 15.0

[node name="Player" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_lvs3r")

[node name="Body" type="CharacterBody2D" parent="."]
y_sort_enabled = true
collision_layer = 3
collision_mask = 3
motion_mode = 1

[node name="Sprite" type="AnimatedSprite2D" parent="Body"]
position = Vector2(0, -1)
sprite_frames = ExtResource("2_ipv2i")
animation = &"front_attack"
offset = Vector2(0, -16)

[node name="Collision" type="CollisionShape2D" parent="Body"]
y_sort_enabled = true
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_kxhnw")

[node name="Range" type="Area2D" parent="Body"]

[node name="Hitbox" type="CollisionShape2D" parent="Body/Range"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_3dhac")

[node name="Iframe" type="Timer" parent="Body"]
wait_time = 0.5

[node name="Flash" type="Timer" parent="Body"]

[node name="Attack" type="Timer" parent="Body"]

[node name="Regen" type="Timer" parent="Body"]

[node name="Movement" type="Timer" parent="Body"]

[node name="Camera" type="Camera2D" parent="Body"]
limit_left = 0
limit_top = 0
limit_right = 9264
limit_bottom = 4256
position_smoothing_enabled = true
position_smoothing_speed = 6.0
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1

[connection signal="body_entered" from="Body/Range" to="Body" method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Body/Range" to="Body" method="_on_hitbox_body_exited"]
[connection signal="timeout" from="Body/Iframe" to="." method="_on_iframe_timeout"]
[connection signal="timeout" from="Body/Flash" to="." method="_on_flash_timeout"]
[connection signal="timeout" from="Body/Attack" to="." method="_on_attack_timeout"]
[connection signal="timeout" from="Body/Regen" to="." method="_on_regen_timeout"]
[connection signal="timeout" from="Body/Movement" to="." method="_on_movement_timeout"]
